test/must_fail/api/must_fail_dir_current.ref
error: dir_current() require exactly 0 arguments but 1 was given
  [must_fail_dir_current.ngjs:0:0] in <anonymous>()
    dir_current("asdf");
    ^

hint: function 'dir_current()' was called with 1 arguments
hint: argument #0 was asdf (string)

Stack trace (1 frames):
  [must_fail_dir_current.ngjs:0:0] in <anonymous>()
    dir_current("asdf");
    ^

exit(7)
