test/must_fail/api/must_fail_dir_current.ngjs
#!/usr/bin/env ngspicejs
// no args needed
// linter: ngspicejs-lint
"use strict";

dir_current("asdf");
